local.css: Prevent wrapping in vowel sign examples.

--- a/common29/local.css
+++ b/common29/local.css
@@ -1930,11 +1930,13 @@ figure summary {
     font-size:300%;  /* may need tweaking for orthography */
     line-height:1;  /* may need tweaking for orthography */
     margin-inline-end: 2rem;
+    white-space: nowrap;
     }
 .vowelSignExample .ipa {
     display: inline-block;
     padding-top: 1rem;
     margin-inline-end: 2rem;
+    white-space: nowrap;
     }
 .vowelSignExample span {
     display: inline-block;
